Modified the project README file.

--- a/doc/README
+++ b/doc/README
@@ -1,14 +1,17 @@
+
 embryo
+======
 
-embryo is a generic Expression Grammar, Grammer (EGG) parser.  This
-parser is intended to be able to parse, verify and generate a grammar
-parser framework from any grammar defined in EGG.
+embryo is a generic parser generator that uses the Expression Grammar, Grammer
+(EGG) grammar format for input.  This parser is intended to be able to parse,
+verify and generate a grammar parser framework from any grammar defined in EGG.
 
-The parser design uses many of the concepts developed and documented
-in tutorial form by Jack W. Crenshaw PHD.  embryo is a pure recursive
-descent parser.
+The resultant parser design uses many of the concepts developed and documented
+in tutorial form by Jack W. Crenshaw PHD.  embryo produces pure recursive
+descent parsers.
 
-Other code modules are also added to provide utility functionality,
-such as a separate grammar framework generation function library.
-
+Other code modules are also added to provide utility functionality, such as a
+separate grammar framework generation function library, an input source
+function library, an input location tracking mechanism, and a callback
+mechanism for parsers that need to work "on-the-fly" such as interpreters.
 
