--- a/doc/README
+++ b/doc/README
@@ -15,3 +15,8 @@ separate grammar framework generation function library, an input source
 function library, an input location tracking mechanism, and a callback
 mechanism for parsers that need to work "on-the-fly" such as interpreters.
 
+For more information on installing the EGG system, including embryo please refer
+to the INSTALL file and other documentation in doc/
+
+Also, a complete set of user guide, tutorial, and reference manual can be built
+and installed from these sources.
